--- a/tvcust/src/main/res/layout/fragment_order.xml
+++ b/tvcust/src/main/res/layout/fragment_order.xml
@@ -10,6 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -54,7 +55,7 @@
             android:background="@color/white"
             app:tabIndicatorColor="@color/sb_blue"
             app:tabIndicatorHeight="3dp"
-            app:tabSelectedTextColor="@color/sb_text_dark"
+            app:tabSelectedTextColor="@color/sb_blue"
             app:tabTextColor="@color/sb_text_blank" />
 
     </android.support.design.widget.AppBarLayout>
