--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
+                app:cardElevation="0dp"
                 app:cardCornerRadius="0dp">
 
                 <LinearLayout
@@ -89,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
+                app:cardElevation="0dp"
                 app:cardCornerRadius="0dp">
 
                 <LinearLayout
