--- a/tvcust/src/main/res/layout/activity_orderallocate.xml
+++ b/tvcust/src/main/res/layout/activity_orderallocate.xml
@@ -94,7 +94,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="1px"
                     android:background="@drawable/line" />
 
                 <LinearLayout
