--- a/tvcust/src/main/res/layout/activity_question.xml
+++ b/tvcust/src/main/res/layout/activity_question.xml
@@ -34,6 +34,8 @@
             android:id="@+id/spring"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:header="@layout/header_common"
+            app:footer="@layout/header_common"
             app:type="follow">
 
             <android.support.v7.widget.RecyclerView
