--- a/tvcust/src/main/res/layout/activity_reqdescribeonly.xml
+++ b/tvcust/src/main/res/layout/activity_reqdescribeonly.xml
@@ -53,7 +53,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="1px"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/line" />
