--- a/tvcust/src/main/res/layout/activity_settingsecurity.xml
+++ b/tvcust/src/main/res/layout/activity_settingsecurity.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            app:cardElevation="0dp"
             app:cardCornerRadius="0dp">
 
             <LinearLayout
