--- a/tvcust/src/main/res/layout/fragment_info.xml
+++ b/tvcust/src/main/res/layout/fragment_info.xml
@@ -79,7 +79,7 @@
             android:background="@color/white"
             app:tabIndicatorColor="@color/sb_blue"
             app:tabIndicatorHeight="3dp"
-            app:tabSelectedTextColor="@color/sb_text_dark"
+            app:tabSelectedTextColor="@color/sb_blue"
             app:tabTextColor="@color/sb_text_blank" />
 
 
