--- a/tvcust/src/main/res/layout/item_list_track.xml
+++ b/tvcust/src/main/res/layout/item_list_track.xml
@@ -6,7 +6,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="1px"
+        android:layout_marginLeft="34dp"
         android:layout_gravity="bottom"
         android:background="@color/sb_bk"/>
 
