--- a/tvcust/src/main/res/layout/item_recycle_device.xml
+++ b/tvcust/src/main/res/layout/item_recycle_device.xml
@@ -7,6 +7,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
     android:background="@color/white"
+    app:cardElevation="0dp"
     app:cardCornerRadius="0dp">
 
     <RelativeLayout
