--- a/tvcust/src/main/res/layout/item_recycle_home_qw_header.xml
+++ b/tvcust/src/main/res/layout/item_recycle_home_qw_header.xml
@@ -6,6 +6,7 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
+    app:cardElevation="0dp"
     android:background="@color/white"
     app:cardCornerRadius="0dp">
 
