--- a/tvcust/src/main/res/layout/item_recycle_msgsys.xml
+++ b/tvcust/src/main/res/layout/item_recycle_msgsys.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="0dp"
     android:layout_marginLeft="10dp"
+    app:cardElevation="0dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp">
 
