--- a/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
+++ b/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
     android:foreground="?attr/selectableItemBackground"
+    app:cardElevation="0dp"
     android:layout_marginTop="10dp"
     app:cardCornerRadius="0dp">
 
@@ -46,7 +45,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1px"
             android:background="@drawable/line"/>
 
         <TextView
