--- a/tvcust/src/main/res/layout/item_recycle_quan.xml
+++ b/tvcust/src/main/res/layout/item_recycle_quan.xml
@@ -36,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ellipsize="end"
+            android:lineSpacingExtra="4dp"
             android:maxLines="3"
             android:textSize="@dimen/text_small"
             android:textColor="@color/sb_text_dark_blank"/>
