--- a/tvcust/src/main/res/layout/tab.xml
+++ b/tvcust/src/main/res/layout/tab.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:gravity="center"
-        android:textColor="@color/sb_blue"
+        android:textColor="@drawable/color_tab_text"
         android:textSize="14sp"
         android:text="0"/>
 
