--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -6,6 +6,8 @@
 
         <attr name="myselected_drawable" format="reference"/>
         <attr name="myunselected_drawable" format="reference"/>
+
+        <attr name="mydoy_size" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="BannerView">
