--- a/tvcust/src/main/res/layout/fragment_login.xml
+++ b/tvcust/src/main/res/layout/fragment_login.xml
@@ -32,7 +32,7 @@
                 android:maxLength="11"
                 android:drawableLeft="@drawable/icon_login_user"
                 android:drawablePadding="20dp"
-                android:hint="账号"
+                android:hint="账户"
                 android:inputType="phone" />
 
             <View
