--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -21,17 +21,6 @@
             app:navigationIcon="@drawable/icon_back"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <TextView
-                android:id="@+id/btn_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginRight="10dp"
-                android:layout_gravity="right"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="提交"
-                android:textColor="@color/white" />
-
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -72,13 +61,14 @@
                         android:textColor="@color/sb_text_dark"
                         android:textSize="@dimen/text_nomal_small" />
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/img_medetail_header"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_marginBottom="40dp"
                         android:layout_marginTop="30dp"
                         android:scaleType="centerCrop"
+                        app:civ_fill_color="@color/white"
                         android:src="@drawable/me_header_defalt" />
 
                 </LinearLayout>
@@ -231,6 +221,30 @@
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <com.dd.CircularProgressButton
+                android:id="@+id/btn_go"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="#00000000"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big"
+                app:cpb_colorIndicator="@color/sb_blue"
+                app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
+                app:cpb_colorProgress="#00000000"
+                app:cpb_iconComplete="@drawable/ic_action_accept"
+                app:cpb_iconError="@drawable/ic_action_cancel"
+                app:cpb_selectorIdle="@drawable/idle_state_selector"
+                app:cpb_textIdle="提交" />
 
         </LinearLayout>
 
