--- a/tvcust/src/main/res/layout/activity_orderallocate.xml
+++ b/tvcust/src/main/res/layout/activity_orderallocate.xml
@@ -182,7 +182,7 @@
                 app:cpb_iconComplete="@drawable/ic_action_accept"
                 app:cpb_iconError="@drawable/ic_action_cancel"
                 app:cpb_selectorIdle="@drawable/idle_state_selector"
-                app:cpb_textIdle="分配任务" />
+                app:cpb_textIdle="请求协助" />
 
         </LinearLayout>
 
