--- a/tvcust/src/main/res/layout/layout_fail.xml
+++ b/tvcust/src/main/res/layout/layout_fail.xml
@@ -2,6 +2,7 @@
     android:id="@+id/lay_showin_main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="130dp"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:layout_gravity="center"
@@ -13,7 +14,7 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/app_logo_trans" />
 
     <TextView
         android:id="@+id/text_lack"
