--- a/tvcust/src/main/res/layout/activity_reqdescribe.xml
+++ b/tvcust/src/main/res/layout/activity_reqdescribe.xml
@@ -65,7 +65,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="申请技术援助"
+                                android:text="申请技术协助"
                                 android:textColor="@color/sb_text_blank_deep_light"
                                 android:textSize="@dimen/text_big_nomal" />
 
@@ -78,7 +78,7 @@
                                 android:id="@+id/text_user_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="选择援助人员"
+                                android:text="选择协助人员"
                                 android:textColor="@color/sb_blue"
                                 android:textSize="@dimen/text_big_nomal" />
 
