--- a/tvcust/src/main/res/layout/activity_setting.xml
+++ b/tvcust/src/main/res/layout/activity_setting.xml
@@ -105,6 +105,23 @@
 
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="58dp"
+                    android:background="@drawable/line" />
+
+                <TextView
+                    android:id="@+id/item_setting_feedbank"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:drawableLeft="@drawable/icon_me_feedbank"
+                    android:drawablePadding="20dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="22dp"
+                    android:text="打小报告" />
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
