--- a/tvcust/src/main/res/layout/dialog_choose_describe.xml
+++ b/tvcust/src/main/res/layout/dialog_choose_describe.xml
@@ -110,7 +110,7 @@
             android:background="@drawable/hot_lay_item_dark"
             android:gravity="center"
             android:padding="10dp"
-            android:text="申请援助"
+            android:text="申请协助"
             android:textColor="@color/sb_text_blank"
             android:textSize="@dimen/text_big" />
 
@@ -180,6 +180,29 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="追加描述"
+            android:textColor="@color/sb_text_blank"
+            android:textSize="@dimen/text_big" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:src="@drawable/line" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lay_dialog_describe_bug"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_dialog_describe_bug"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/hot_lay_item_dark"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="反馈补丁"
             android:textColor="@color/sb_text_blank"
             android:textSize="@dimen/text_big" />
 
