--- a/tvcust/src/main/res/layout/fragment_server.xml
+++ b/tvcust/src/main/res/layout/fragment_server.xml
@@ -20,6 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
             <!--app:layout_scrollFlags="scroll|enterAlways"-->
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/btn_go_msg"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
@@ -92,7 +93,7 @@
                                     app:civ_border_overlay="true"
                                     app:civ_border_color="@color/white"
                                     app:civ_fill_color="@color/white"
-                                    android:src="@drawable/eva_serv_header" />
+                                    android:src="@drawable/header_serv" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -119,6 +120,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
+                                android:drawableLeft="@drawable/icon_serv_phone"
+                                android:drawablePadding="10dp"
                                 android:text="客服电话"
                                 android:textColor="@color/sb_text_blank"
                                 android:textSize="@dimen/text_nomal" />
@@ -155,6 +158,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
+                                android:drawableLeft="@drawable/icon_serv_qq"
+                                android:drawablePadding="10dp"
                                 android:text="客服QQ"
                                 android:textColor="@color/sb_text_blank"
                                 android:textSize="@dimen/text_nomal" />
@@ -191,6 +196,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
+                                android:drawableLeft="@drawable/icon_serv_mail"
+                                android:drawablePadding="10dp"
                                 android:text="客服邮箱"
                                 android:textColor="@color/sb_text_blank"
                                 android:textSize="@dimen/text_nomal" />
