--- a/tvcust/src/main/res/layout/layout_loading.xml
+++ b/tvcust/src/main/res/layout/layout_loading.xml
@@ -2,6 +2,7 @@
     android:id="@+id/lay_showin_main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="130dp"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:layout_gravity="center"
